# yace3

yace2/: README
yace2remake/: sourcefiles
yace2remake/gogi/yace2/: MainClass.java
yace2remake/gogi/yace2/core/: RegistryUserImpl.java  RoomContainerImpl.java  RoomImpl.java  SendStopThread.java  UserContainerImpl.java  UserImpl.java  YaCE.java
yace2remake/gogi/yace2/interfaces/: RegistryControl.java  RegistryUser.java  Room.java  RoomContainer.java  Server.java  User.java  UserContainer.java
yace2remake/gogi/yace2/regconv/: RegConverter.java  RegConverterMain.java
yace3/: CONTAINERTEST.cpp  HKSTEST.cpp  Makefile.in  README  STRINGTEST.cpp  adminhandler.cpp  adminhandler.h  authhandler.cpp  commandargs.cpp  commandargs.h  commands.cpp  commands2.cpp  configure.in  connection.cpp  functions.cpp  functions.h  hkstable.cpp  hkstable.h  i_handler.h  inputhandler.cpp  inputqueue.cpp  ircargs.cpp  ircargs.h  irccon.cpp  irccon.h  ircfunctions.cpp  ircfunctions.h  loginhandler.cpp  logintable.cpp  logintable.h  room.cpp  room.h  roomcont.cpp  roomcont.h  sqlcon.cpp  sqlcon.h  stringutil.cpp  timedactions.cpp  user.cpp  user.h  (+6 more)
yace3/php/: chgform.inc.txt  config.inc.php  regform.inc.txt  sqlcon.php
yace3/php/usercp/: cp.php  loginform.inc.txt  session.php
yace3/php/usercp/templates/: choice.inc.txt
yace3plus1/: README  SQLTEST.cpp  adminactions.cpp  adminactions.h  authhandler.cpp  authhandler.h  commandargs.h  commands.cpp  commands.h  config.cpp  config.h  connection.h  functions.cpp  functions.h  hash_map.h  inputhandler.cpp  inputhandler.h  inputqueue.h  irccon.cpp  ircfunctions.cpp  ircfunctions.h  loginhandler.h  logintable.h  main.cpp  sourcehandler.cpp  sourcehandler.h  sqlcon.cpp  sqlcon.h  stringutil.cpp  stringutil.h  timedactions.h  timer.cpp  timer.h  user.h  usercont.cpp  util.cpp  yace.conf.sample  yace.cpp
yace3plus1/php/: actform.inc.txt  activate.php  mail.txt  regchg.php  register.php  smilies.php  style.css
yace3plus1/php/usercp/: actions.php  index.php
yace3plus1/php/usercp/templates/: action.inc.txt  category.inc.txt
