dnl Process this file with autoconf to produce a configure script.
AC_INIT(yace.h)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC

dnl Replace `main' with a function in -lmysqlclient:
AC_CHECK_LIB(mysqlclient, main)
dnl Replace `main' with a function in -lsqlplus:
AC_CHECK_LIB(sqlplus, main)

dnl Checks for header files.

AC_CHECK_PROG([CCPP], [ccgnu2-config], [Yes], [No])
case "$CCPP" in
  "No" ) AC_MSG_ERROR([Didn't find CommonC++2 in '$PATH']);;
esac

CXXFLAGS="-D_GNU_SOURCE -pthread -g -Wall -march=i386  -I`ccgnu2-config --includes`"
LDFLAGS="$LDFLAGS `ccgnu2-config --stdlibs`"

AC_MSG_CHECKING([for MySQL library directory])
AC_ARG_WITH(mysql, [  --with-mysql=<path>     root directory path of MySQL installation], [MYSQL_lib_check="$with_mysql/lib" MYSQL_inc_check="$with_mysql/include"], [MYSQL_lib_check="/usr/local/mysql/lib /usr/local/lib/mysql /opt/mysql/lib/mysql /usr/lib/mysql /usr/local/mysql/lib /usr/local/lib /opt/mysql/lib /usr/lib" MYSQL_inc_check="/usr/local/mysql/include /usr/local/include/mysql /opt/mysql/include/mysql /usr/include/mysql"])
                                                                                                                                                             
AC_ARG_WITH(mysql-lib, [  --with-mysql-lib=<path> directory path of MySQL library installation], [MYSQL_lib_check=$with_mysql/lib/mysql])
                                                                                                                                                             
AC_ARG_WITH(mysql-include, [  --with-mysql-include=<path>	directory path of MySQL header installation], [MYSQL_inc_check=$with_mysql/include/mysql])


MYSQL_libdir=
for m in $MYSQL_lib_check; do
        if test -d "$m" && \
           (test -f "$m/libmysqlclient.so" || test -f "$m/libmysqlclient.a")
        then
                MYSQL_libdir=$m
                break
        fi
done
                                                                                                                                                             
if test -z "$MYSQL_libdir"; then
        AC_MSG_ERROR([Didn't find the mysql library dir in '$MYSQL_dir_check'])
fi
                                                                                                                                                             
case "$MYSQL_libdir" in
  /* ) ;;
  * )  AC_MSG_ERROR([The MySQL library directory ($MYSQL_libdir) must be an absolute path.]) ;;
esac
                                                                                                                                                             
AC_MSG_RESULT([$MYSQL_libdir])
                                                                                                                                                             
LDFLAGS="$LDFLAGS -L${MYSQL_libdir}"
                                                                               
AC_MSG_CHECKING([for MySQL include directory])
MYSQL_incdir=
for m in $MYSQL_inc_check; do
        if test -d "$m" && test -f "$m/mysql.h"
        then
                MYSQL_incdir=$m
                break
        fi
done
                                                                                                                                                             
if test -z "$MYSQL_incdir"; then
        AC_MSG_ERROR([Didn't find the mysql include dir in '$MYSQL_inc_check'])
fi
                                                                                                                                                             
case "$MYSQL_incdir" in
  /* ) ;;
  * )  AC_MSG_ERROR([The MySQL include directory ($MYSQL_incdir) must be an absolute path.]) ;;
esac
                                                                                                                                                             
AC_MSG_RESULT([$MYSQL_incdir])
                                                                                                                                                             
CXXFLAGS="$CXXFLAGS -I${MYSQL_incdir}"
 
					
AC_MSG_CHECKING([for MySQL++ library directory])
AC_ARG_WITH(mysqlpp, [  --with-mysqlpp=<path>     root directory path of MySQL++ installation], [MYSQL_lib_check="$with_mysql/lib" MYSQL_inc_check="$with_mysql/include"], [MYSQLPP_lib_check="/usr/local/mysql++/lib /usr/local/lib/mysql++ /opt/mysql/lib/mysql++ /usr/lib/mysql++ /usr/local/mysql++/lib /usr/local/lib /opt/mysql/lib /usr/lib" MYSQLPP_inc_check="/usr/local/mysql++/include /usr/local/include/mysql++ /opt/mysql++/include/mysql++ /usr/include/mysql++"])
                                                                                                                                                             
AC_ARG_WITH(mysqlpp-lib, [  --with-mysqlpp-lib=<path> directory path of MySQL++ library installation], [MYSQLPP_lib_check=$with_mysqlpp/lib])
                                                                                                                                                             
AC_ARG_WITH(mysqlpp-include, [  --with-mysqlpp-include=<path> directory path of MySQL++ header installation], [MYSQLPP_inc_check=$with_mysqlpp/include])


MYSQL_libdir=
for m in $MYSQLPP_lib_check; do
        if test -d "$m" && \
           (test -f "$m/libsqlplus.so" || test -f "$m/libsqlplus.a")
        then
                MYSQLPP_libdir=$m
                break
        fi
done
                                                                                                                                                             
if test -z "$MYSQLPP_libdir"; then
        AC_MSG_ERROR([Didn't find the mysql++ library dir in '$MYSQLPP_dir_check'])
fi
                                                                                                                                                             
case "$MYSQLPP_libdir" in
  /* ) ;;
  * )  AC_MSG_ERROR([The MySQL++ library directory ($MYSQLPP_libdir) must be an absolute path.]) ;;
esac
                                                                                                                                                             
AC_MSG_RESULT([$MYSQLPP_libdir])
                                                                                                                                                             
LDFLAGS="$LDFLAGS -L${MYSQLPP_libdir}"


AC_MSG_CHECKING([for MySQL++ include directory])
MYSQLPP_incdir=
for m in $MYSQLPP_inc_check; do
        if test -d "$m" && test -f "$m/sqlplus.hh"
        then
                MYSQLPP_incdir=$m
                break
        fi
done
                                                                                                                                                             
if test -z "$MYSQLPP_incdir"; then
        AC_MSG_ERROR([Didn't find the mysql++ include dir in '$MYSQLPP_inc_check'])
fi
                                                                                                                                                             
case "$MYSQLPP_incdir" in
  /* ) ;;
  * )  AC_MSG_ERROR([The MySQL++ include directory ($MYSQLPP_incdir) must be an absolute path.]) ;;
esac
                                                                                                                                                             
AC_MSG_RESULT([$MYSQLPP_incdir])

AC_MSG_CHECKING([for IQ > 80])
echo "no"

CXXFLAGS="$CXXFLAGS -I${MYSQLPP_incdir}"

dnl Checks for library functions.

AC_OUTPUT(Makefile)
